@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Apr 10 14:03:29 2009 -->
+<!--Generated with glade3 3.4.5 on Tue Apr 14 10:34:33 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="title" translatable="yes">Back In Time</property>
@@ -483,7 +483,7 @@ in current snapshot !&lt;/b&gt;</property>
                       </widget>
                     </child>
                     <child>
-                      <widget class="GtkLabel" id="label5">
+                      <widget class="GtkLabel" id="lbl_schedule">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">&lt;b&gt;Schedule&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
